fixed validation for SignIn, added a \2BBF icon and moved the message to align right on the text

--- a/Silicon_AspNetMVC/wwwroot/css/scss/sections/_signin.scss
+++ b/Silicon_AspNetMVC/wwwroot/css/scss/sections/_signin.scss
@@ -34,6 +34,11 @@
                 }
             }
 
+            .validation {
+                display: flex;
+                justify-content: space-between;
+            }
+
             .checkbox {
                 display: flex;
                 flex-direction: row;
@@ -82,7 +87,7 @@
 
             input {
                 border: 1px solid $gray-400;
-                padding: 8px;
+                padding: .7rem;
                 border-radius: .3rem;
                 margin-bottom: 1rem;
 
@@ -110,6 +115,24 @@
                 margin-bottom: 2rem;
             }
 
+            span {
+                position: relative;
+
+                &.field-validation-error {
+                     @include text-s;
+                     color: $danger;
+
+                     &::after {
+                         position: absolute;
+                         right: 10px;
+                         top: 40px;
+                         z-index: 10;
+                         font-size: 2em;
+                         display: block;
+                         content: '\2BBF';
+                     }
+                 }
+            }
 
             p {
                 font-weight: 800;
